# DietApp

./: .gitignore  pyproject.toml
backend/backend/: settings.py  urls.py
backend/diets/: admin.py  models.py  serializers.py  views.py
backend/diets/migrations/: 0001_initial.py  0002_remove_diet_recipe_diet_afternoon_meal_and_more.py  0003_alter_diet_afternoon_meal_alter_diet_breakfast_and_more.py  0004_alter_diet_user.py  0005_diet_is_active.py  0006_diet_end_diet_date_diet_start_diet_date_and_more.py  0007_alter_diet_end_diet_date_alter_diet_start_diet_date.py  0008_alter_diet_day.py  0009_alter_diet_day.py
backend/fixtures/: ingredients.json  product_category.json  products.json  recipes.json
backend/ingredients/: admin.py  models.py  serializers.py  views.py
backend/ingredients/migrations/: 0001_initial.py  0002_ingredient_recipe.py  0003_alter_ingredient_product_alter_ingredient_recipe.py
backend/product/: admin.py  models.py  serializers.py  views.py
backend/product/migrations/: 0001_initial.py  0002_product_calories_product_carbohydrates_product_fat_and_more.py  0003_alter_product_calories_alter_product_carbohydrates_and_more.py  (+7 more)
backend/product_category/: admin.py  models.py  serializers.py  views.py
backend/recipe/: admin.py  models.py  serializers.py  views.py
backend/user_api/: admin.py  models.py  serializers.py  urls.py  validations.py  views.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  App.test.js  index.css  index.js  setupTests.js
(+40 files in other folders)
